<resources>
    <string name="app_name">Trash Collector App</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_admin">Sign Up Admin</string>
    <string name="mail_address">Email Address</string>
    <string name="password">Password</string>
    <string name="ok">Ok</string>
    <string name="already_a_member">Already a member?</string>
    <string name="forget_your_password">Forgot Your Password??</string>
    <string name="sign_in">Sign In</string>
    <string name="reset_my_password">Reset My Password</string>
    <string name="create_profile">Create Profile</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="surname">SurName</string>
    <string name="enter_your_surname">Enter Your SurName</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_phone_number">Enter Your Phone Number</string>
    <string name="e_mail">Email</string>
    <string name="email_address">Email Address</string>
    <string name="profile">Profile</string>
    <string name="dies">Dies</string>
    <string name="log_out">Log Out</string>
    <string name="title_activity_maps">MapsActivity</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
</resources>