<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ResetPasswordActivity">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/text"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:text="@string/reset_my_password"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/gradient_end_color"
            style="?android:attr/listSeparatorTextViewStyle" />

        <ImageView
            android:id="@+id/profile_pic_imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150sdp"
            android:gravity="center_vertical"
            android:src="@drawable/baseline_account_box_black_24dp"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/rounded_fg2"/>


        <EditText
            android:id="@+id/EditTextSurname"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="20dp"
            android:hint="@string/mail_address"

            android:inputType="textEmailAddress"/>
        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btn_shape"
            android:textColor="@color/intro_title_color"/>
        <TextView
            android:id="@+id/btn_sign_up"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:onClick="NavigateSignUp"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/gradient_end_color"/>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>