<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignInActivityAdmin">
    <TableLayout
        android:id="@+id/tablel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:stretchColumns="1">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/profile_pic_imageView"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_150sdp"
            android:gravity="center_vertical"
            android:src="@drawable/baseline_account_circle_black_24dp"
            android:layout_marginTop="@dimen/_63sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/rounded_fg2"/>

        <TextView
            android:id="@+id/text"
            android:textSize="20sp"
            android:padding="@dimen/_5sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:layout_margin="@dimen/_10ssp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            android:clickable="true"
            android:gravity="center"
            android:textColor="@color/gradient_end_color"
            style="?android:attr/listSeparatorTextViewStyle"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etemaillayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignInMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail_address"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPasswordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/SignInPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>



    </TableLayout>
    <Button
        android:id="@+id/SignInButton"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        app:layout_constraintTop_toBottomOf="@id/tablel"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/btn_shape"
        android:textColor="@color/white"/>
</androidx.constraintlayout.widget.ConstraintLayout>