<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:id="@+id/profile_pic_imageView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_180sdp"
            android:gravity="center_vertical"
            android:src="@drawable/baseline_account_box_black_24dp"
            android:layout_marginTop="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:foreground="@drawable/rounded_fg"/>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_270sdp"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20sdp"
            android:padding="5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="User Profile"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/gradient_end_color"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:layout_gravity="center"
                android:padding="@dimen/_5sdp"
                android:textSize="18sp"/>
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_account_circle_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_name_textView"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/name"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/buttonEditName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/baseline_create_black_24dp"
                    android:background="@drawable/custom_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditName"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewSurname"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_account_box_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_surname_textView"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/surname"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/buttonEditSurname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/baseline_create_black_24dp"
                    android:background="@drawable/custom_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditSurname"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_phone_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/profile_phoneno_textView"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="Phone"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/buttonEditPhoneNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/profile_name_textView"
                    android:drawableRight="@drawable/baseline_dialpad_black_24dp"
                    android:background="@drawable/custom_button"
                    style="?android:attr/borderlessButtonStyle"
                    android:onClick="buttonClickedEditPhoneNo"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"/>
            </TableRow>
            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="2">
                <ImageView
                    android:id="@+id/imageViewMail"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:srcCompat="@drawable/baseline_email_black_24dp"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"/>
                <TextView
                    android:id="@+id/textViewEmailAdress"
                    android:layout_width="377dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/mail_address"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp"/>
            </TableRow>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>